src/runtime/batch/syntax/BatchScriptParser.py
# $ANTLR 3.1.1 /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g 2012-07-30 19:29:33

import sys
from antlr3 import *
from antlr3.compat import set, frozenset
         
from batch.Expressions import *
from datetime import date



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
FUNCTION=8
EXPONENT=21
T__29=29
T__28=28
OCTAL_ESC=26
FOR=7
FLOAT=17
ID=15
EOF=-1
IF=4
ESC_SEQ=27
THEN=5
IN=13
VAR=10
DIGIT=19
COMMENT=22
T__42=42
T__43=43
T__40=40
T__41=41
T__46=46
T__47=47
T__44=44
T__45=45
T__48=48
UNICODE_ESC=24
ELSE=6
HEX_DIGIT=25
INT=16
TRUE=11
ALPHA=20
T__30=30
T__31=31
T__32=32
WS=23
T__33=33
T__34=34
T__35=35
T__36=36
T__37=37
T__38=38
T__39=39
DATE=14
FALSE=12
OUTPUT=9
STRING=18

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "IF", "THEN", "ELSE", "FOR", "FUNCTION", "OUTPUT", "VAR", "TRUE", "FALSE", "IN", "DATE", "ID", "INT", "FLOAT", "STRING", "DIGIT", "ALPHA", "EXPONENT", "COMMENT", "WS", "UNICODE_ESC", "HEX_DIGIT", "OCTAL_ESC", "ESC_SEQ", "';'", "'='", "'{'", "'}'", "'('", "')'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'!'", "','", "'.'"
]




class BatchScriptParser(Parser):
    grammarFileName = "/Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g"
    antlr_version = version_str_to_tuple("3.1.1")
    antlr_version_str = "3.1.1"
    tokenNames = tokenNames

    def __init__(self, input, state=None):
        if state is None:
            state = RecognizerSharedState()

        Parser.__init__(self, input, state)







                


        



    # $ANTLR start "main"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:26:1: main returns [value] : e= statements EOF ;
    def main(self, ):

        value = None

        e = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:27:5: (e= statements EOF )
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:27:9: e= statements EOF
                pass 
                self._state.following.append(self.FOLLOW_statements_in_main212)
                e = self.statements()

                self._state.following.pop()
                #action start
                value = e
                #action end
                self.match(self.input, EOF, self.FOLLOW_EOF_in_main216)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return value

    # $ANTLR end "main"


    # $ANTLR start "statements"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:30:1: statements returns [value] : (e= statement ( ';' (es= statements )? )? | VAR x= ID '=' e= expr ';' b= statements );
    def statements(self, ):

        value = None

        x = None
        e = None

        es = None

        b = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:31:5: (e= statement ( ';' (es= statements )? )? | VAR x= ID '=' e= expr ';' b= statements )
                alt3 = 2
                LA3_0 = self.input.LA(1)

                if (LA3_0 == IF or (FOR <= LA3_0 <= OUTPUT) or (TRUE <= LA3_0 <= FALSE) or (DATE <= LA3_0 <= STRING) or LA3_0 == 32 or LA3_0 == 46) :
                    alt3 = 1
                elif (LA3_0 == VAR) :
                    alt3 = 2
                else:
                    nvae = NoViableAltException("", 3, 0, self.input)

                    raise nvae

                if alt3 == 1:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:31:9: e= statement ( ';' (es= statements )? )?
                    pass 
                    self._state.following.append(self.FOLLOW_statement_in_statements241)
                    e = self.statement()

                    self._state.following.pop()
                    #action start
                    value=e
                    #action end
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:32:9: ( ';' (es= statements )? )?
                    alt2 = 2
                    LA2_0 = self.input.LA(1)

                    if (LA2_0 == 28) :
                        alt2 = 1
                    if alt2 == 1:
                        # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:32:11: ';' (es= statements )?
                        pass 
                        self.match(self.input, 28, self.FOLLOW_28_in_statements275)
                        # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:33:13: (es= statements )?
                        alt1 = 2
                        LA1_0 = self.input.LA(1)

                        if (LA1_0 == IF or (FOR <= LA1_0 <= FALSE) or (DATE <= LA1_0 <= STRING) or LA1_0 == 32 or LA1_0 == 46) :
                            alt1 = 1
                        if alt1 == 1:
                            # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:33:14: es= statements
                            pass 
                            self._state.following.append(self.FOLLOW_statements_in_statements292)
                            es = self.statements()

                            self._state.following.pop()
                            #action start
                            value = Seq(value,es)
                            #action end








                elif alt3 == 2:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:36:9: VAR x= ID '=' e= expr ';' b= statements
                    pass 
                    self.match(self.input, VAR, self.FOLLOW_VAR_in_statements348)
                    x=self.match(self.input, ID, self.FOLLOW_ID_in_statements352)
                    self.match(self.input, 29, self.FOLLOW_29_in_statements354)
                    self._state.following.append(self.FOLLOW_expr_in_statements358)
                    e = self.expr()

                    self._state.following.pop()
                    self.match(self.input, 28, self.FOLLOW_28_in_statements360)
                    self._state.following.append(self.FOLLOW_statements_in_statements364)
                    b = self.statements()

                    self._state.following.pop()
                    #action start
                    value = Let(x.getText(),e,b)
                    #action end



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return value

    # $ANTLR end "statements"


    # $ANTLR start "block"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:39:1: block returns [Expression value] : '{' e= statements '}' ;
    def block(self, ):

        value = None

        e = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:40:5: ( '{' e= statements '}' )
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:40:7: '{' e= statements '}'
                pass 
                self.match(self.input, 30, self.FOLLOW_30_in_block387)
                self._state.following.append(self.FOLLOW_statements_in_block391)
                e = self.statements()

                self._state.following.pop()
                self.match(self.input, 31, self.FOLLOW_31_in_block393)
                #action start
                value =  e
                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return value

    # $ANTLR end "block"


    # $ANTLR start "statement"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:43:1: statement returns [value] : ( FOR '(' x= ID IN e= expr ')' b= block | e= expr );
    def statement(self, ):

        value = None

        x = None
        e = None

        b = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:44:5: ( FOR '(' x= ID IN e= expr ')' b= block | e= expr )
                alt4 = 2
                LA4_0 = self.input.LA(1)

                if (LA4_0 == FOR) :
                    alt4 = 1
                elif (LA4_0 == IF or (FUNCTION <= LA4_0 <= OUTPUT) or (TRUE <= LA4_0 <= FALSE) or (DATE <= LA4_0 <= STRING) or LA4_0 == 32 or LA4_0 == 46) :
                    alt4 = 2
                else:
                    nvae = NoViableAltException("", 4, 0, self.input)

                    raise nvae

                if alt4 == 1:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:44:9: FOR '(' x= ID IN e= expr ')' b= block
                    pass 
                    self.match(self.input, FOR, self.FOLLOW_FOR_in_statement420)
                    self.match(self.input, 32, self.FOLLOW_32_in_statement422)
                    x=self.match(self.input, ID, self.FOLLOW_ID_in_statement426)
                    self.match(self.input, IN, self.FOLLOW_IN_in_statement428)
                    self._state.following.append(self.FOLLOW_expr_in_statement432)
                    e = self.expr()

                    self._state.following.pop()
                    self.match(self.input, 33, self.FOLLOW_33_in_statement434)
                    self._state.following.append(self.FOLLOW_block_in_statement438)
                    b = self.block()

                    self._state.following.pop()
                    #action start
                    value = For(x.getText(),e,b)
                    #action end


                elif alt4 == 2:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:45:9: e= expr
                    pass 
                    self._state.following.append(self.FOLLOW_expr_in_statement454)
                    e = self.expr()

                    self._state.following.pop()
                    #action start
                    value = e
                    #action end



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return value

    # $ANTLR end "statement"


    # $ANTLR start "expr"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:48:1: expr returns [value] : ( FUNCTION '(' x= ID ')' e= block | a= orexpr );
    def expr(self, ):

        value = None

        x = None
        e = None

        a = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:49:5: ( FUNCTION '(' x= ID ')' e= block | a= orexpr )
                alt5 = 2
                LA5_0 = self.input.LA(1)

                if (LA5_0 == FUNCTION) :
                    alt5 = 1
                elif (LA5_0 == IF or LA5_0 == OUTPUT or (TRUE <= LA5_0 <= FALSE) or (DATE <= LA5_0 <= STRING) or LA5_0 == 32 or LA5_0 == 46) :
                    alt5 = 2
                else:
                    nvae = NoViableAltException("", 5, 0, self.input)

                    raise nvae

                if alt5 == 1:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:49:9: FUNCTION '(' x= ID ')' e= block
                    pass 
                    self.match(self.input, FUNCTION, self.FOLLOW_FUNCTION_in_expr508)
                    self.match(self.input, 32, self.FOLLOW_32_in_expr510)
                    x=self.match(self.input, ID, self.FOLLOW_ID_in_expr514)
                    self.match(self.input, 33, self.FOLLOW_33_in_expr516)
                    self._state.following.append(self.FOLLOW_block_in_expr520)
                    e = self.block()

                    self._state.following.pop()
                    #action start
                    value = Fun(x.getText(),e)
                    #action end


                elif alt5 == 2:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:50:9: a= orexpr
                    pass 
                    self._state.following.append(self.FOLLOW_orexpr_in_expr541)
                    a = self.orexpr()

                    self._state.following.pop()
                    #action start
                    value = a
                    #action end



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return value

    # $ANTLR end "expr"


    # $ANTLR start "orexpr"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:53:1: orexpr returns [value] : a= andexpr ( '||' b= andexpr )* ;
    def orexpr(self, ):

        value = None

        a = None

        b = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:54:5: (a= andexpr ( '||' b= andexpr )* )
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:54:9: a= andexpr ( '||' b= andexpr )*
                pass 
                self._state.following.append(self.FOLLOW_andexpr_in_orexpr591)
                a = self.andexpr()

                self._state.following.pop()
                #action start
                value = a
                #action end
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:55:9: ( '||' b= andexpr )*
                while True: #loop6
                    alt6 = 2
                    LA6_0 = self.input.LA(1)

                    if (LA6_0 == 34) :
                        alt6 = 1


                    if alt6 == 1:
                        # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:55:11: '||' b= andexpr
                        pass 
                        self.match(self.input, 34, self.FOLLOW_34_in_orexpr615)
                        self._state.following.append(self.FOLLOW_andexpr_in_orexpr619)
                        b = self.andexpr()

                        self._state.following.pop()
                        #action start
                        value = Or(value,b)
                        #action end


                    else:
                        break #loop6






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return value

    # $ANTLR end "orexpr"


    # $ANTLR start "andexpr"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:59:1: andexpr returns [value] : a= comp ( '&&' b= comp )* ;
    def andexpr(self, ):

        value = None

        a = None

        b = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:60:5: (a= comp ( '&&' b= comp )* )
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:60:9: a= comp ( '&&' b= comp )*
                pass 
                self._state.following.append(self.FOLLOW_comp_in_andexpr660)
                a = self.comp()

                self._state.following.pop()
                #action start
                value = a
                #action end
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:61:9: ( '&&' b= comp )*
                while True: #loop7
                    alt7 = 2
                    LA7_0 = self.input.LA(1)

                    if (LA7_0 == 35) :
                        alt7 = 1


                    if alt7 == 1:
                        # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:61:11: '&&' b= comp
                        pass 
                        self.match(self.input, 35, self.FOLLOW_35_in_andexpr684)
                        self._state.following.append(self.FOLLOW_comp_in_andexpr688)
                        b = self.comp()

                        self._state.following.pop()
                        #action start
                        value = And(value,b)
                        #action end


                    else:
                        break #loop7






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return value

    # $ANTLR end "andexpr"


    # $ANTLR start "comp"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:65:1: comp returns [value] : a= term (op= compop b= term )* ;
    def comp(self, ):

        value = None

        a = None

        op = None

        b = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:66:5: (a= term (op= compop b= term )* )
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:66:9: a= term (op= compop b= term )*
                pass 
                self._state.following.append(self.FOLLOW_term_in_comp729)
                a = self.term()

                self._state.following.pop()
                #action start
                value = a
                #action end
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:67:9: (op= compop b= term )*
                while True: #loop8
                    alt8 = 2
                    LA8 = self.input.LA(1)
                    if LA8 == 36:
                        alt8 = 1
                    elif LA8 == 37:
                        alt8 = 1
                    elif LA8 == 38:
                        alt8 = 1
                    elif LA8 == 39:
                        alt8 = 1
                    elif LA8 == 40:
                        alt8 = 1
                    elif LA8 == 41:
                        alt8 = 1

                    if alt8 == 1:
                        # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:67:11: op= compop b= term
                        pass 
                        self._state.following.append(self.FOLLOW_compop_in_comp758)
                        op = self.compop()

                        self._state.following.pop()
                        self._state.following.append(self.FOLLOW_term_in_comp762)
                        b = self.term()

                        self._state.following.pop()
                        #action start
                        value = BinOp(op,value,b)
                        #action end


                    else:
                        break #loop8






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return value

    # $ANTLR end "comp"


    # $ANTLR start "compop"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:71:1: compop returns [op] : ( '==' | '!=' | '<' | '<=' | '>' | '>=' );
    def compop(self, ):

        op = None

        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:72:5: ( '==' | '!=' | '<' | '<=' | '>' | '>=' )
                alt9 = 6
                LA9 = self.input.LA(1)
                if LA9 == 36:
                    alt9 = 1
                elif LA9 == 37:
                    alt9 = 2
                elif LA9 == 38:
                    alt9 = 3
                elif LA9 == 39:
                    alt9 = 4
                elif LA9 == 40:
                    alt9 = 5
                elif LA9 == 41:
                    alt9 = 6
                else:
                    nvae = NoViableAltException("", 9, 0, self.input)

                    raise nvae

                if alt9 == 1:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:72:9: '=='
                    pass 
                    self.match(self.input, 36, self.FOLLOW_36_in_compop799)
                    #action start
                    op = '=='
                    #action end


                elif alt9 == 2:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:73:9: '!='
                    pass 
                    self.match(self.input, 37, self.FOLLOW_37_in_compop814)
                    #action start
                    op = '!='
                    #action end


                elif alt9 == 3:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:74:9: '<'
                    pass 
                    self.match(self.input, 38, self.FOLLOW_38_in_compop829)
                    #action start
                    op = '<'
                    #action end


                elif alt9 == 4:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:75:9: '<='
                    pass 
                    self.match(self.input, 39, self.FOLLOW_39_in_compop845)
                    #action start
                    op = '<='
                    #action end


                elif alt9 == 5:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:76:9: '>'
                    pass 
                    self.match(self.input, 40, self.FOLLOW_40_in_compop860)
                    #action start
                    op = '>'
                    #action end


                elif alt9 == 6:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:77:9: '>='
                    pass 
                    self.match(self.input, 41, self.FOLLOW_41_in_compop876)
                    #action start
                    op = '>='
                    #action end



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return op

    # $ANTLR end "compop"


    # $ANTLR start "term"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:80:1: term returns [value] : a= factor (op= addop b= factor )* ;
    def term(self, ):

        value = None

        a = None

        op = None

        b = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:81:5: (a= factor (op= addop b= factor )* )
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:81:9: a= factor (op= addop b= factor )*
                pass 
                self._state.following.append(self.FOLLOW_factor_in_term906)
                a = self.factor()

                self._state.following.pop()
                #action start
                value = a
                #action end
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:82:9: (op= addop b= factor )*
                while True: #loop10
                    alt10 = 2
                    LA10_0 = self.input.LA(1)

                    if (LA10_0 == 42) :
                        alt10 = 1
                    elif (LA10_0 == 43) :
                        alt10 = 1


                    if alt10 == 1:
                        # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:82:11: op= addop b= factor
                        pass 
                        self._state.following.append(self.FOLLOW_addop_in_term933)
                        op = self.addop()

                        self._state.following.pop()
                        self._state.following.append(self.FOLLOW_factor_in_term937)
                        b = self.factor()

                        self._state.following.pop()
                        #action start
                        value = BinOp(op,value,b)
                        #action end


                    else:
                        break #loop10






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return value

    # $ANTLR end "term"


    # $ANTLR start "addop"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:86:1: addop returns [op] : ( '+' | '-' );
    def addop(self, ):

        op = None

        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:87:5: ( '+' | '-' )
                alt11 = 2
                LA11_0 = self.input.LA(1)

                if (LA11_0 == 42) :
                    alt11 = 1
                elif (LA11_0 == 43) :
                    alt11 = 2
                else:
                    nvae = NoViableAltException("", 11, 0, self.input)

                    raise nvae

                if alt11 == 1:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:87:9: '+'
                    pass 
                    self.match(self.input, 42, self.FOLLOW_42_in_addop973)
                    #action start
                    op = '+'
                    #action end


                elif alt11 == 2:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:88:9: '-'
                    pass 
                    self.match(self.input, 43, self.FOLLOW_43_in_addop985)
                    #action start
                    op = '-'
                    #action end



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return op

    # $ANTLR end "addop"


    # $ANTLR start "factor"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:91:1: factor returns [value] : a= base (op= mulop b= base )* ;
    def factor(self, ):

        value = None

        a = None

        op = None

        b = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:92:5: (a= base (op= mulop b= base )* )
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:92:9: a= base (op= mulop b= base )*
                pass 
                self._state.following.append(self.FOLLOW_base_in_factor1012)
                a = self.base()

                self._state.following.pop()
                #action start
                value = a
                #action end
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:93:9: (op= mulop b= base )*
                while True: #loop12
                    alt12 = 2
                    LA12_0 = self.input.LA(1)

                    if (LA12_0 == 44) :
                        alt12 = 1
                    elif (LA12_0 == 45) :
                        alt12 = 1


                    if alt12 == 1:
                        # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:93:11: op= mulop b= base
                        pass 
                        self._state.following.append(self.FOLLOW_mulop_in_factor1041)
                        op = self.mulop()

                        self._state.following.pop()
                        self._state.following.append(self.FOLLOW_base_in_factor1045)
                        b = self.base()

                        self._state.following.pop()
                        #action start
                        value = BinOp(op,value,b)
                        #action end


                    else:
                        break #loop12






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return value

    # $ANTLR end "factor"


    # $ANTLR start "mulop"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:97:1: mulop returns [op] : ( '*' | '/' );
    def mulop(self, ):

        op = None

        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:98:5: ( '*' | '/' )
                alt13 = 2
                LA13_0 = self.input.LA(1)

                if (LA13_0 == 44) :
                    alt13 = 1
                elif (LA13_0 == 45) :
                    alt13 = 2
                else:
                    nvae = NoViableAltException("", 13, 0, self.input)

                    raise nvae

                if alt13 == 1:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:98:9: '*'
                    pass 
                    self.match(self.input, 44, self.FOLLOW_44_in_mulop1083)
                    #action start
                    op = '*'
                    #action end


                elif alt13 == 2:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:99:9: '/'
                    pass 
                    self.match(self.input, 45, self.FOLLOW_45_in_mulop1095)
                    #action start
                    op = '/'
                    #action end



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return op

    # $ANTLR end "mulop"


    # $ANTLR start "base"
    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:102:1: base returns [value] : ( '!' e= base | e= assign | IF '(' a= expr ')' t= block ( ELSE e= block )? | x= INT | x= FLOAT | x= STRING | DATE '(' d= STRING ')' | x= TRUE | x= FALSE | '(' e= expr ')' );
    def base(self, ):

        value = None

        x = None
        d = None
        e = None

        a = None

        t = None


        try:
            try:
                # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:103:5: ( '!' e= base | e= assign | IF '(' a= expr ')' t= block ( ELSE e= block )? | x= INT | x= FLOAT | x= STRING | DATE '(' d= STRING ')' | x= TRUE | x= FALSE | '(' e= expr ')' )
                alt15 = 10
                LA15 = self.input.LA(1)
                if LA15 == 46:
                    alt15 = 1
                elif LA15 == OUTPUT or LA15 == ID:
                    alt15 = 2
                elif LA15 == IF:
                    alt15 = 3
                elif LA15 == INT:
                    alt15 = 4
                elif LA15 == FLOAT:
                    alt15 = 5
                elif LA15 == STRING:
                    alt15 = 6
                elif LA15 == DATE:
                    alt15 = 7
                elif LA15 == TRUE:
                    alt15 = 8
                elif LA15 == FALSE:
                    alt15 = 9
                elif LA15 == 32:
                    alt15 = 10
                else:
                    nvae = NoViableAltException("", 15, 0, self.input)

                    raise nvae

                if alt15 == 1:
                    # /Users/wcook/workspace/batch-python-runtime/src/runtime/batch/syntax/BatchScript.g:103:9: '!' e= base
                    pass 
                    self.match(self.input, 46, self.FOLLOW_46_in_base1120)
                    self._state.following.append(self.FOLLOW_base_in_base1124)
                    e = self.base()

                    self._state.following.pop()
                    #action start
                    value = Not(e)
                    #action end

